# pack_rs

./: Cargo.toml
src/: main.rs
